--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>
         </div>
     </header>
+    <!-- Левое меню -->
     <section class="sidebar">
         <div class="sidebar_wrap">
             <ul class="sidebar_list">
@@ -61,12 +62,13 @@
                 <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
                 <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
-                <li class="sidebar_li"><a href="">ИНФОРМАЦИЯ</a></li>
+                <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
                 <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
             </ul>
             <a href="#header" class="arrow_up"><img src="./img/arrow-up.svg" alt=""></a>
         </div>
     </section>
+    <!-- Меню внизу при адаптиве от 768 -->
     <section class="slidebar_mob">
         <div class="slidebar_mob_wrap">
             <a href="#!" class="menu_mob burger">Меню<img src="./img/slidebar-burger.png" alt=""></a>
@@ -81,17 +83,19 @@
             </a>
         </div>
     </section>
+    <!-- Меню под хедером при адаптиве от 1400 -->
     <section class="menu_adaptive">
             <ul class="menu_adaptive_list">
                 <li class="menu_adaptive_li"><a href="/">Главная</a></li>
                 <li class="menu_adaptive_li"><a href="products.html">Продукция</a></li>
-                <li class="menu_adaptive_li"><a href="">Услуги</a></li>
+                <li class="menu_adaptive_li"><a href="uslugi.html">Услуги</a></li>
                 <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
                 <li class="menu_adaptive_li"><a href="">Производство</a></li>
-                <li class="menu_adaptive_li"><a href="">Информация</a></li>
+                <li class="menu_adaptive_li"><a href="info.html">Информация</a></li>
                 <li class="menu_adaptive_li"><a href="">Контакты</a></li>
             </ul>
     </section>
+    <!-- Выпадающее меню справа -->
     <nav class="menu_nav">
             <div class="menu_name">
                 <h3>Меню</h3>
@@ -104,19 +108,19 @@
                     <a href="/" class="main_lev">ГЛАВНАЯ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">ПРОДУКЦИЯ</a>
+                    <a href="products.html" class="main_lev">ПРОДУКЦИЯ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">УСЛУГИ</a>
+                    <a href="uslugi.html" class="main_lev">УСЛУГИ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">ДОСТАВКА</a>
+                    <a href="dostavka.html" class="main_lev">ДОСТАВКА</a>
                 </li>
                 <li class="menu_item">
                     <a href="/" class="main_lev">ПРОИЗВОДСТВО</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">ИНФОРМАЦИЯ</a>
+                    <a href="info.html" class="main_lev">ИНФОРМАЦИЯ</a>
                 </li>
                 <li class="menu_item">
                     <a href="/" class="main_lev">КОНТАКТЫ</a>
