--- a/contacts.html
+++ b/contacts.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uslugi</title>
+    <title>Dostavka</title>
     <link href="https://fonts.cdnfonts.com/css/sf-pro-display?styles=98774,98777,98776,98772,98773,98775,98770,98771,98769" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/oswald-4?styles=21468" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/style-uslugi.css">
+    <link rel="stylesheet" href="css/style-contacts.css">
 </head>
 <body>
     <header class="header" id="header">
@@ -57,11 +57,11 @@
             <ul class="sidebar_list">
                 <li class="sidebar_li"><a href="/">ГЛАВНАЯ</a></li>
                 <li class="sidebar_li"><a href="products.html">ПРОДУКЦИЯ</a></li>
-                <li class="sidebar_li sidebar_li_act"><a href="uslugi.html">УСЛУГИ</a></li>
+                <li class="sidebar_li"><a href="uslugi.html">УСЛУГИ</a></li>
                 <li class="sidebar_li"><a href="dostavka.html">ДОСТАВКА</a></li>
                 <li class="sidebar_li"><a href="">ПРОИЗВОДСТВО</a></li>
                 <li class="sidebar_li"><a href="info.html">ИНФОРМАЦИЯ</a></li>
-                <li class="sidebar_li"><a href="">КОНТАКТЫ</a></li>
+                <li class="sidebar_li sidebar_li_act"><a href="contacts.html">КОНТАКТЫ</a></li>
             </ul>
             <a href="#header" class="arrow_up"><img src="./img/arrow-up.svg" alt=""></a>
         </div>
@@ -90,7 +90,7 @@
             <li class="menu_adaptive_li"><a href="dostavka.html">Доставка</a></li>
             <li class="menu_adaptive_li"><a href="">Производство</a></li>
             <li class="menu_adaptive_li"><a href="info.html">Информация</a></li>
-            <li class="menu_adaptive_li"><a href="">Контакты</a></li>
+            <li class="menu_adaptive_li"><a href="contacts.html">Контакты</a></li>
         </ul>
     </section>
     <!-- Выпадающее меню справа -->
@@ -121,86 +121,90 @@
                     <a href="info.html" class="main_lev">ИНФОРМАЦИЯ</a>
                 </li>
                 <li class="menu_item">
-                    <a href="/" class="main_lev">КОНТАКТЫ</a>
+                    <a href="contacts.html" class="main_lev">КОНТАКТЫ</a>
                 </li>
             </ul>
     </nav>
         <main class="main">
             <section class="intro">
                 <div class="intro_wrap">
-                    <div class="intro_nav">
-                        <a href="/"><img src="../img/dostavka/arrow-left-grey.png" alt="">Главная</a>
-                        <p>|</p>
-                        <a href="">Услуги</a>
+                    <div class="intro_desc">
+                        <div class="intro_nav">
+                            <a href="/"><img src="./img/dostavka/arrow-left-grey.png" alt="">Главная</a>
+                            <p>|</p>
+                            <a href="">Контакты</a>
+                        </div>
+                        <h2 class="intro_h2">Контакты</h2>
+                        <div class="left_side">
+                            <div class="left_top">
+                                <div class="left_cont">
+                                    <h3>Телефоны</h3>
+                                    <p>+7 (4832) 32-10-65</p>
+                                    <p>+7 (4832) 32-10-66</p>
+                                    <p>+7 (4832) 32-10-67</p>
+                                    <h3 class="dif_h3">Адрес</h3>
+                                    <p>Брянск, ул. 50 Армии, 1</p>
+                                    <h3 class="dif_h3">Соцсети</h3>
+                                    <a href=""><img src="./img/contacts/whatsapp.svg" alt=""></a>
+                                    <a href=""><img src="./img/contacts/telegram.svg" alt=""></a>
+                                </div>
+                                <div class="right_card">
+                                    <img src="./img/contacts/map.png" alt="">
+                                </div>
+                            </div>
+                            <div class="left_mid">
+                                <img src="./img/contacts/map-det.png" alt="">
+                            </div>
+                            <div class="left_bot">
+                                <img src="./img/contacts/house-1.png" alt="" class="img_house_1">
+                                <img src="./img/contacts/house-2.png" alt="" class="img_house_2">
+                            </div>
+                        </div>
                     </div>
-                    <div class="service_wrap">
-                        <h1 class="intro_h2">Услуги</h1>
-                        <div class="serv_card_wrap">
-                            <div class="serv_card">
-                                <div class="serv_img_mob">
-                                    <img src="../img/uslugi/uslugi-1-mob.png" alt="">
-                                </div>
-                                <div class="serv_desc">
-                                    <div class="desc_wrap">
-                                    <h2>Изготовление на заказ</h2>
-                                    <p>Наша компания изготавливает различные виды машиностроительной 
-                                        продукции, как по чертежам заказчика, так и по "образцу" с 
-                                        разработкой конструкторской документации.</p>
-                                    </div>
-                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
-                                </div>
-                                <div class="serv_img">
-                                    <img src="../img/uslugi/uslugi-1.png" alt="">
-                                </div>
+                    <div class="line"></div>
+                    <div class="right_side">
+                        <div class="cont_det cont_det_sbt">
+                            <h3>Отдел сбыта</h3>
+                            <div>
+                                <span>Телефон:</span>
+                                <p>+7 (4832) 32-10-65 <br> (Доп. : 102; 107; 108; 111; 113)</p>
                             </div>
-                            <div class="serv_card">
-                                <div class="serv_img_mob">
-                                    <img src="../img/uslugi/uslugi-2-mob.png" alt="">
-                                </div>
-                                <div class="serv_desc">
-                                    <div class="desc_wrap">
-                                    <h2>Ремонт</h2>
-                                    <p>Наша компания выполняет, как гарантийный так и постгарантийный 
-                                        ремонт изделий. </p>
-                                    </div>
-                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
-                                </div>
-                                <div class="serv_img">
-                                    <img src="../img/uslugi/uslugi-2.png" alt="">
-                                </div>
+                            <div>
+                                <span>Email: </span>
+                                <p>info.sbyt@32po.ru</p>
                             </div>
-                            <div class="serv_card">
-                                <div class="serv_img_mob">
-                                    <img src="../img/uslugi/uslugi-3-mob.png" alt="">
-                                </div>
-                                <div class="serv_desc">
-                                    <div class="desc_wrap">
-                                    <h2>Термическая обработка</h2>
-                                    <p>Наша компания предоставляет услуги по термообработке деталей. 
-                                        Имеем в своём распоряжении печь камерного типа  и установку 
-                                        ТВЧ.</p>
-                                    </div>
-                                    <a href="" class="serv_btn">Заказать <img src="../img/arrow-right-intro.png" alt=""></a>
-                                </div>
-                                <div class="serv_img">
-                                    <img src="../img/uslugi/uslugi-3.png" alt="">
-                                </div>
+                        </div>
+                        <div class="cont_det cont_det_snab">
+                            <h3>Отдел снабжения</h3>
+                            <div>
+                                <span>Телефон:</span>
+                                <p>+7 (4832) 32-10-65 (Доп. : 110; 116)</p>
                             </div>
-                            <div class="serv_card">
-                                <div class="serv_img_mob">
-                                    <img src="../img/uslugi/uslugi-4-mob.png" alt="">
-                                </div>
-                                <div class="serv_desc">
-                                    <div class="desc_wrap">
-                                    <h2>Конструкторские услуги</h2>
-                                    <p>Наша компания имеет собственное конструкторское бюро и готова 
-                                        оказать соответствующие услуги.</p>
-                                    </div>
-                                    <a href="" class="serv_btn">Заказать <img src="./img/arrow-right-intro.png" alt=""></a>
-                                </div>
-                                <div class="serv_img">
-                                    <img src="../img/uslugi/uslugi-4.png" alt="">
-                                </div>
+                            <div>
+                                <span>Email: </span>
+                                <p>info.snab@32po.ru</p>
+                            </div>
+                        </div>
+                        <div class="cont_det cont_det_log">
+                            <h3>Отдел логистики</h3>
+                            <div>
+                                <span>Телефон:</span>
+                                <p>+7 (4832) 32-10-65 (Доп. : 107)</p>
+                            </div>
+                            <div>
+                                <span>Email:</span>
+                                <p> info.log@32po.ru</p>
+                            </div>
+                        </div>
+                        <div class="cont_det cont_det_pro">
+                            <h3>Производство</h3>
+                            <div>
+                                <span>Телефон:</span>
+                                <p>+7 (4832) 32-10-65 (Доп. : 118)</p>
+                            </div>
+                            <div>
+                                <span>Email:</span>
+                                <p> info.log@32po.ru</p>
                             </div>
                         </div>
                     </div>
